--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.51.1",
     "@types/next-auth": "^3.15.0",
+    "firebase": "^10.12.3",
     "js-cookie": "^3.0.5",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
